crates/infinity-agent-cli/tests/snapshots/tui_reflow_snapshots__mid_stream_after_shrink.snap
---
source: crates/infinity-agent-cli/tests/tui_reflow_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ Infinity Agent CLI
~ Type your messages below. /help for commands. Ctrl+C to exit.
~ 
~ scroll line 01
~ scroll line 02
~ scroll line 03
~ scroll line 04
~ scroll line 05
~ scroll line 06
┌────────────────────────────────────────────────────────────────────────────────┐
│> stream please                                                                 │
│this sentence is interrupted by a resize and then keeps going afterwards        │
│                                                                                │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│/help for commands                                 mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=6 col=1
