crates/infinity-agent-cli/tests/snapshots/tui_reflow_snapshots__picker_resized_narrow.snap
---
source: crates/infinity-agent-cli/tests/tui_reflow_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ Infinity Agent CLI
~ Type your messages below. /help for commands. Ctrl
~ +C to exit.
~ 
┌──────────────────────────────────────────────────┐
│scroll line 01                                    │
│scroll line 02                                    │
│scroll line 03                                    │
│scroll line 04                                    │
│scroll line 05                                    │
│                                                  │
│                                                  │
│                                                  │
│                                                  │
│──────────────────────────────────────────────────│
│ mock       Mock Model                 100k ctx   │
│ mock       Mock Mini                   32k ctx   │
│                                                  │
│↑↓ navigate  enter…  mock: mock-model · 0% context│
└──────────────────────────────────────────────────┘
cursor: row=4 col=14 (hidden)
