crates/infinity-agent-cli/tests/snapshots/tui_reflow_snapshots__reflow_wrapped_narrow_40.snap
---
source: crates/infinity-agent-cli/tests/tui_reflow_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ Infinity Agent CLI
~ Type your messages below. /help for comm
~ ands. Ctrl+C to exit.
~ 
~ > explain the project
~ word01 word02 word03 word04 word05 word0
~ 6 word07 word08 word09 word10 word11 wor
┌────────────────────────────────────────┐
│d12 word13 word14 word15 word16 word17 w│
│ord18 word19 word20 word21 word22 word23│
│ word24 word25 word26 word27 word28 word│
│29 word30                               │
│                                        │
│                                        │
│────────────────────────────────────────│
│────────────────────────────────────────│
│                                        │
│                                        │
│────────────────────────────────────────│
│                                        │
│                                        │
│                                        │
│mock-model (/help for commands)0% contex│
│                                        │
└────────────────────────────────────────┘
cursor: row=12 col=1
